# ITAcademy

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.py
cmake/: utility.cmake
homework_1/: CMakeLists.txt  main.cpp
module-1/: CMakeLists.txt
module-11/: AbstractForest.cpp  AbstractForest.h  AbstractTree.cpp  AbstractTree.h  CMakeLists.txt  Coniferous.cpp  Coniferous.h  Deciduous.cpp  Deciduous.h  Maple.h  Oak.h  Pine.h  main.cpp
module-13/: CMakeLists.txt  ICar.h  ServiceStation.h  main.cpp
module-14/: CMakeLists.txt  Circle.cpp  Circle.h  Task1.cpp  Task1.h  VectorGenerator.h  main.cpp
module-15/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  UserArea.cpp  UserArea.h  main.cpp
module-16/: CMakeLists.txt  Data.h  Generator.h  Print.h  main.cpp
module-2/: CMakeLists.txt  compiler_info.cpp  compiler_info.hpp  factorial.cpp  factorial.hpp  main.cpp  os_compiler.h.in  os_info.cpp  os_info.hpp  system_info.cpp  system_info.cppm  system_info.hpp
module-3/: CMakeLists.txt  Game.cpp  Game.h  Player.cpp  Player.h  main.cpp  number_parser.cpp  number_parser.h  table.cpp  table.h
module-4/: CMakeLists.txt  main.cpp  number_converter.cpp  number_converter.h
module-5/: CMakeLists.txt  Shape.cpp  Shape.h  ShapeHandler.cpp  ShapeHandler.h  main.cpp
module-6/: CMakeLists.txt  SquareMatrix.cpp  SquareMatrix.h  StringReverser.cpp  StringReverser.h  VectorGenerator.cpp  VectorGenerator.h  main.cpp
module-7/: CMakeLists.txt  PointedArr.cpp  PointedArr.h  main.cpp
module-8/: Book.cpp  Book.h  CMakeLists.txt  main.cpp
module-9/: CMakeLists.txt  Forest.cpp  Forest.h  Tree.cpp  Tree.h  TreeKind.cpp  TreeKind.h  main.cpp
utility/: CMakeLists.txt  StreamChecker.cpp  StreamChecker.h  utils.h
